--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 :root {
     --slib-blue: #56B5FF;
+    --slib-dark-blue: #3366FF;
     --slib-green: #57F287;
     --slib-yellow: #FEE75C;
     --slib-orange: #FFB066;
@@ -158,34 +159,81 @@ h1,
     font-weight: 600;
 }
 
-h2 .h2 {
+h2,
+.h2 {
     font-size: 2.5rem;
     font-family: 'Inter', sans-serif;
     font-weight: 600;
 }
 
-h3 .h3 {
+h3,
+.h3 {
     font-size: 2rem;
     font-family: 'Inter', sans-serif;
     font-weight: 600;
 }
 
-h4 .h4 {
+h4,
+.h4 {
     font-size: 1.5rem;
     font-family: 'Inter', sans-serif;
     font-weight: 600;
 }
 
-h5 .h5 {
+h5,
+.h5 {
     font-size: 1.25rem;
     font-family: 'Inter', sans-serif;
     font-weight: 600;
 }
 
-h6 .h6 {
+h6,
+.h6 {
     font-size: 1rem;
     font-family: 'Inter', sans-serif;
     font-weight: 600;
+}
+
+p,
+.p {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+mark,
+.mark {
+    display: inline-block !important;
+    padding: 2px 4px !important;
+    background-color: var(--slib-yellow) !important;
+    border-radius: 3px !important;
+}
+
+a[href] {
+    color: var(--slib-dark-blue);
+    text-decoration: none;
+}
+
+a[href]:hover {
+    text-decoration: underline solid;
+}
+
+code:not(.inline),
+code.block {
+    display: inline-block !important;
+    padding: 5px 10px !important;
+    background-color: rgba(120, 120, 120, .1) !important;
+    border-radius: 3px !important;
+    font-size: .9rem;
+    margin-top: .75rem !important;
+    margin-bottom: .75rem !important;
+    font-family: 'Roboto Mono', 'Courier New', Courier, monospace;
+}
+
+p code:not(.block),
+code.inline {
+    padding: 2px 4px !important;
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
 }
 
 .flex-1 {
