--- a/osslib.css
+++ b/osslib.css
@@ -6,7 +6,7 @@
     --slib-yellow: #FEE75C;
     --slib-orange: #FFB066;
     --slib-red: #ED4245;
-    --slib-purple: #bb84d6;
+    --slib-purple: #AA66CC;
     --slib-pink: #E679C8;
     --slib-dark: #0D0D0D;
     --slib-blue-rgb: 86, 181, 255;
@@ -428,7 +428,7 @@ ul>ul {
 }
 
 .btn-purple:hover {
-    background-color: #c89cde !important;
+    background-color: #bb84d6 !important;
 }
 
 .btn-pink {
