Changed green color

--- a/osslib.css
+++ b/osslib.css
@@ -2,7 +2,7 @@
 :root {
     --slib-blue: #56B5FF;
     --slib-dark-blue: #3366FF;
-    --slib-green: #57F287;
+    --slib-green: #0FA107;
     --slib-yellow: #FEE75C;
     --slib-orange: #FFB066;
     --slib-red: #ED4245;
