--- a/osslib.css
+++ b/osslib.css
@@ -3,11 +3,11 @@
     --slib-blue: #56B5FF;
     --slib-dark-blue: #3366FF;
     --slib-green: #30CB00;
-    --slib-yellow: #FEE75C;
-    --slib-orange: #FFB066;
-    --slib-red: #ED4245;
-    --slib-purple: #AA66CC;
-    --slib-pink: #E679C8;
+    --slib-yellow: #FFDB00;
+    --slib-orange: #F97300;
+    --slib-red: #EF2200;
+    --slib-purple: #9C0FBF;
+    --slib-pink: #EA1AB7;
     --slib-dark: #0D0D0D;
     --slib-blue-rgb: 86, 181, 255;
     --slib-dark-blue-rgb: 51, 102, 255;
